# non-normal

./: .flake8  README.md  noxfile.py  pyproject.toml
src/non_normal/: fleishman.py
tests/: test_fleishman.py
