[tool.poetry]
name = "non-normal"
version = "0.1.0"
description = "Generate non-normal distributions with known mean, variance, skewness and kurtosis"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/<your-username>/hypermodern-python"
repository = "https://github.com/<your-username>/hypermodern-python"
keywords = ["non-normal", "fleishman", "distribution", "statistics"]

authors = ["Aman Chokshi <achokshi@student.unimelb.edu.au>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
